--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,13 @@ html, body {
   background: bisque;
 } 
 
+// .main-container{
+//   // display: flex;
+//   // justify-content: space-between;
+//   // align-items: center;
+
+// }
+
 .range{
   height: 80px;
   width: 30%;
