--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,25 +50,25 @@ html, body {
   transition: transform 0.3s ease-in-out;
 }
 
-.sliderValue span.show{
-  transform: translateX(-30%) scale(1);
-}
+// .sliderValue span.show{
+//   transform: translateX(-30%) scale(1);
+// }
 
-.sliderValue span:after{
-  position: absolute;
-  content: '';
-  height: 100%;
-  width: 100%;
-  background: #664AFF;
-  border: 3px solid #fff;
-  z-index: -1;
-  left: 50%;
-  transform: translateX(-50%) rotate(45deg);
-  border-bottom-left-radius: 50%;
-  box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
-  border-top-left-radius: 50%;
-  border-top-right-radius: 50%;
-}
+// .sliderValue span:after{
+//   position: absolute;
+//   content: '';
+//   height: 100%;
+//   width: 100%;
+//   background: #664AFF;
+//   border: 3px solid #fff;
+//   z-index: -1;
+//   left: 50%;
+//   transform: translateX(-50%) rotate(45deg);
+//   border-bottom-left-radius: 50%;
+//   box-shadow: 0px 0px 8px rgba(0,0,0,0.1);
+//   border-top-left-radius: 50%;
+//   border-top-right-radius: 50%;
+// }
 
 .field{
   display: flex;
@@ -104,16 +104,6 @@ html, body {
   z-index: 2222;
 }
 
-.range input::-webkit-slider-thumb{
-  -webkit-appearance: none;
-  width: 20px;
-  height: 20px;
-  background: red;
-  border-radius: 50%;
-  background: #664AFF;
-  border: 1px solid #664AFF;
-  cursor: pointer;
-}
 .range input::-webkit-slider-thumb{
   -webkit-appearance: none;
   width: 20px;
